// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-if > basic v-if 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div> ", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    const x2 = _txt(n2)
    _renderEffect(() => _setText(x2, _toDisplayString(_ctx.msg)))
    return n2
  })
  return n0
}"
`;

exports[`compiler: v-if > comment between branches 1`] = `
"import { createIf as _createIf, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div>")
const t1 = _template("<!--foo-->")
const t2 = _template("<p>")
const t3 = _template("<!--bar-->")
const t4 = _template("fine")
const t5 = _template("<div> ")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.orNot), () => {
    const n5 = t1()
    const n6 = t2()
    return [n5, n6]
  }, () => {
    const n10 = t3()
    const n11 = t4()
    return [n10, n11]
  }))
  const n13 = t5()
  const x13 = _txt(n13)
  _renderEffect(() => _setText(x13, _toDisplayString(_ctx.text)))
  return [n0, n13]
}"
`;

exports[`compiler: v-if > component v-if 1`] = `
"import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, createIf as _createIf } from 'vue';

export function render(_ctx) {
  const _component_Component = _resolveComponent("Component")
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = _createComponentWithFallback(_component_Component, null, null, true)
    return n2
  })
  return n0
}"
`;

exports[`compiler: v-if > dedupe same template 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>hello")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  })
  const n3 = _createIf(() => (_ctx.ok), () => {
    const n5 = t0()
    return n5
  })
  return [n0, n3]
}"
`;

exports[`compiler: v-if > multiple v-if at root 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>foo</div>")
const t1 = _template("<div>bar</div>")
const t2 = _template("<div>baz</div>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.bar), () => {
    const n4 = t1()
    return n4
  }))
  const n6 = _createIf(() => (_ctx.baz), () => {
    const n8 = t2()
    return n8
  })
  return [n0, n6]
}"
`;

exports[`compiler: v-if > template v-if (multiple element) 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>hi</div>")
const t1 = _template("<div>ho</div>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    const n3 = t1()
    return [n2, n3]
  })
  return n0
}"
`;

exports[`compiler: v-if > template v-if (single element) 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>hi</div>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`compiler: v-if > template v-if (text) 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("hello")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    return n2
  })
  return n0
}"
`;

exports[`compiler: v-if > template v-if (with v-for inside) 1`] = `
"import { createFor as _createFor, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = _createFor(() => (_ctx.list), (_for_item0) => {
      const n4 = t0()
      return n4
    })
    return n2
  })
  return n0
}"
`;

exports[`compiler: v-if > template v-if + normal v-else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>hi</div>")
const t1 = _template("<div>ho</div>")
const t2 = _template("<div></div>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    const n3 = t1()
    return [n2, n3]
  }, () => {
    const n5 = t2()
    return n5
  })
  return n0
}"
`;

exports[`compiler: v-if > template v-if 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>")
const t1 = _template("hello")
const t2 = _template("<p> ")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    const n3 = t1()
    const n4 = t2()
    const x4 = _txt(n4)
    _renderEffect(() => _setText(x4, _toDisplayString(_ctx.msg)))
    return [n2, n3, n4]
  })
  return n0
}"
`;

exports[`compiler: v-if > v-if + v-else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>", true)
const t1 = _template("<p>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => {
    const n4 = t1()
    return n4
  })
  return n0
}"
`;

exports[`compiler: v-if > v-if + v-else-if + v-else 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>", true)
const t1 = _template("<p>", true)
const t2 = _template("fine", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.orNot), () => {
    const n4 = t1()
    return n4
  }, () => _createIf(() => (false), () => {
    const n7 = t1()
    return n7
  }, () => {
    const n10 = t2()
    return n10
  }, true)))
  return n0
}"
`;

exports[`compiler: v-if > v-if + v-else-if 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>", true)
const t1 = _template("<p>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.orNot), () => {
    const n4 = t1()
    return n4
  }))
  return n0
}"
`;

exports[`compiler: v-if > v-if + v-if / v-else[-if] 1`] = `
"import { setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<span>foo")
const t1 = _template("<span>bar")
const t2 = _template("<span>baz")
const t3 = _template("<div>", true)

export function render(_ctx) {
  const n8 = t3()
  _setInsertionState(n8, null)
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    return n2
  })
  _setInsertionState(n8, null, true)
  const n3 = _createIf(() => (_ctx.bar), () => {
    const n5 = t1()
    return n5
  }, () => {
    const n7 = t2()
    return n7
  })
  return n8
}"
`;

exports[`compiler: v-if > v-if and extra at root 1`] = `
"import { createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div>foo</div>")
const t1 = _template("<div>bar</div>")
const t2 = _template("<div>baz</div>")

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.foo), () => {
    const n2 = t0()
    return n2
  }, () => _createIf(() => (_ctx.bar), () => {
    const n4 = t1()
    return n4
  }))
  const n6 = t2()
  return [n0, n6]
}"
`;

exports[`compiler: v-if > v-if with v-once 1`] = `
"import { txt as _txt, toDisplayString as _toDisplayString, setText as _setText, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div> </div>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (_ctx.ok), () => {
    const n2 = t0()
    const x2 = _txt(n2)
    _setText(x2, _toDisplayString(_ctx.msg))
    return n2
  }, null, true)
  return n0
}"
`;

exports[`compiler: v-if > v-on with v-if 1`] = `
"import { setDynamicEvents as _setDynamicEvents, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<button>w/ v-if</button>", true)

export function render(_ctx) {
  const n0 = _createIf(() => (true), () => {
    const n2 = t0()
    _renderEffect(() => _setDynamicEvents(n2, { click: _ctx.clickEvent }))
    return n2
  }, null, true)
  return n0
}"
`;
